TMA article, caption/image cleanup

--- a/_posts/2022-07-10-mathgre.md
+++ b/_posts/2022-07-10-mathgre.md
@@ -23,7 +23,7 @@ I wanted to put some of the resources that I'm using online, so other people can
 
 First, I've got [my Anki deck](https://ankiweb.net/shared/info/1213569360). [Anki](https://apps.ankiweb.net/) is a flashcard program which uses spaced repetition to schedule flashcards based on their difficulty. It's really useful for basic memorization. I encourage whoever uses the deck to not just memorize the theorems, but also develop an understanding of what they look like "under the hood" -- the related proofs and intuition. But I also challenge the idea that a good mathematician *never* has to memorize things, and for a test where time is a major factor, I think it's mandatory to have these things available for quick recall. Here's one of the cards:
 
-![Mean Value](/assets/media/meanvalue.png){: .center-image}
+![Mean Value](/assets/media/meanvalue.png)
 
 For textbooks, I've got a copy of Stewart's [Calculus: Early Transcendentals](https://www.google.com/books/edition/Calculus_Early_Transcendentals/hEF-BAAAQBAJ?hl=en&gbpv=0). This is probably the most important one, since the test if 50% calculus problems of various difficulty. I also have Rudin's [Principles of Mathematical Analysis](https://books.google.com/books/about/Principles_of_Mathematical_Analysis.html?id=kwqzPAAACAAJ), which is basically a real analysis bible. For linear algebra, I have [Linear Algebra Done Right](https://www.google.com/books/edition/Linear_Algebra_Done_Right/ovIYVIlithQC?hl=en&gbpv=0) by Sheldon Axler. For abstract algebra, I have [Abstract Algebra](http://abstract.ups.edu/) by Tom Judson, which is available freely online! For topology, I have [Elementary Topology](https://www.google.com/books/edition/Elementary_Topology/q8TttGzVGxUC?hl=en&gbpv=0) by Michael Gemignani.
 
