keywords and image size

--- a/_posts/2022-07-10-mathgre.md
+++ b/_posts/2022-07-10-mathgre.md
@@ -6,6 +6,7 @@ image: /assets/media/meanvalue.webp
 image_width: 783
 image_height: 639
 description: Learning some math using study problems from the GRE Math Subject Test.
+keywords: GRE, mathematics, exam preparation, Anki, graduate school, math subject test
 ---
 
 My blog has been pretty quiet recently, because I've been focusing on studying for the [GRE Mathematics Subject Test](https://www.ets.org/gre/subject/about/content/mathematics/). I think this test is sort of unique among popular, standardized tests, because the problems on it are very difficult. There are 66 questions on each test, and it must be done in 2 hours and 50 minutes. That means the test-taker has 2 minutes and 35 seconds to answer questions like these:<!--more-->
